--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:precommit": "eslint 'src/**/*.{ts,tsx}' --max-warnings 0",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:precommit"
+    ]
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
