--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
