--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "ts-jest": "^29.2.5",
+    "uuid": "^10.0.0",
     "valtio": "^2.0.0",
     "yup": "^1.4.0"
   },
