--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/jest": "^29.5.12",
     "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1691.0",
     "jest": "^29.7.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
