--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@slack/webhook": "^7.0.3",
     "@types/jest": "^29.5.12",
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1691.0",
