--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@types/jest": "^29.5.12",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
-    "next": "14.2.7",
+    "next": "^16.1.6",
     "next-auth": "^4.24.7",
     "prettier": "^3.3.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "ts-jest": "^29.2.5",
     "uuid": "^10.0.0",
     "valtio": "^2.0.0",
@@ -37,8 +37,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^16.1.6",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5"
   }
